--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="stylesheet.css">
 
     <!-- JS -->
-    <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.23/angular.min.js"></script>
+    <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular.min.js"></script>
     <script src="app.js"></script>
     <script src="parser.js"></script>
 
@@ -24,8 +24,8 @@
         <input type="file" on-read-file="showContent($fileContent)">
         <!--<p>Sort Type: {{ sortType }}</p>-->
         <!--<p>Sort Reverse: {{ sortReverse }}</p>-->
-        <!--<p>Search Query: {{ searchFish }}</p>-->
-        <p>Count Rows: {{ testArray.length }}</p>
+        <!--<p>Search Query: {{ search }}</p>-->
+        <p>Count Rows: {{ contentArray.length }}</p>
     </div>
 
         <div >
@@ -45,7 +45,7 @@
                 <div class="input-group">
                     <div class="input-group-addon"><i class="fa fa-search"></i></div>
 
-                    <input type="text" class="form-control" placeholder="Search da Fish" ng-model="searchFish">
+                    <input type="text" class="form-control" placeholder="Find!!" ng-model="search" ng-model-options="{debounce: 500}" />
 
                 </div>
             </div>
@@ -67,7 +67,7 @@
         </thead>
 
         <tbody>
-            <tr ng-repeat="row in contentArray | orderBy:sortType | filter:searchFish track by $index" ng-hide="$first" >
+            <tr ng-repeat="row in contentArray | orderBy:sortType | filter:search track by $index" ng-hide="$first" >
                 <td ng-repeat="cell in row track by $index">
                     {{cell}}
                 </td>
