CSV-Library ausgetauscht

--- a/src/index.html
+++ b/src/index.html
@@ -12,13 +12,17 @@
 
   <issue-list />
 
-
   <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular.min.js"></script>
+  <script src="assets/js/csv.min.js"></script>
   <script src="app/app.module.js"></script>
+
+  <script src="app/csvjs/csvjs.module.js"></script>
+  <script src="app/csvjs/csv.service.js"></script>
+
   <script src="app/issuelist/issuelist.module.js"></script>
   <script src="app/issuelist/issuelist.config.js"></script>
   <script src="app/issuelist/onreadfile.directive.js"></script>
   <script src="app/issuelist/issuelist.component.js"></script>
-  <script src="app/issuelist/convert.service.js"></script>
+
 </body>
 </html>
