Container Class weg

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 </head>
 <body>
-<div class="container" ng-app="sortApp" ng-controller="mainController">
+<div ng-app="sortApp" ng-controller="mainController">
 
     <div class="alert alert-info">
         <input type="file" on-read-file="showContent($fileContent)">
